create|copy 80% project, add section require, mobile, choice, world, footer

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>uber</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/bootstrap-grid.min.css">
     <link rel="stylesheet" href="css/style.min.css">
@@ -156,5 +157,198 @@
             </div>
         </div>
     </section>
+    <section class="mobile">
+        <div class="container">
+            <div class="label label_mobile">преимущества</div>
+            <h2 class="reasons__heading">мобильное приложение убер</h2>
+            <h3 class="third__heading">Сделайте заказ, совершите поездку и оплатите ее стоимость, используя свой мобильный телефон</h3>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="mobile__item mobile__item_1">
+                        <div class="subtitle">
+                            оформление заказа одним касанием
+                        </div>
+                        <div class="mobile__plus"></div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mobile__item mobile__item_2">
+                        <div class="subtitle">
+                            надежная подача
+                        </div>
+                        <div class="mobile__plus"></div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mobile__item mobile__item_3">
+                        <div class="subtitle">
+                            прозрачные цены
+                        </div>
+                        <div class="mobile__plus"></div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mobile__item mobile__item_4">
+                        <div class="subtitle">
+                            безналичная оплата
+                        </div>
+                        <div class="mobile__plus"></div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mobile__item mobile__item_5">
+                        <div class="subtitle">
+                            обратная связь
+                        </div>
+                        <div class="mobile__plus"></div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="mobile__item mobile__item_6">
+                        <div class="subtitle">
+                            разделить стоимость поездки
+                        </div>
+                        <div class="mobile__plus"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="choice">
+        <div class="container">
+            <div class="label label__choice">возможности</div>
+            <h2 class="heading heading__choice">Выбор - отличная штука!</h2>
+            <h3 class="third__heading">Закажите автомобиль, который подходит вам по стилю и бюджету</h3>
+            <div>
+                <img src="img/choice/Автомобиль.png" alt="" class="choice__img">
+            </div>
+            <div class="choice__black"></div>
+            <div class="subtitle subtitle__choice">Машины на каждый день.<br>Лучше, быстрее и дешевле, чем такси</div>
+        </div>
+    </section>
+    <section class="require">
+        <div class="container">
+            <div class="label label__require">возможности</div>
+            <h2 class="reasons__heading">условия и требования</h2>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="require__block">
+                        <div class="title">УСЛОВИЯ: со своим авто:</div>
+                        <ul class="require__list">
+                            <li class="require__item">Подключаем к системе UBER  под 10%.</li>
+                            <li class="require__item">Ни каких взносов  0%!</li>
+                            <li class="require__item">Можем подключать удаленно без приезда в офис</li>
+                            <li class="require__item">ИП не требуется</li>
+                            <li class="require__item">Заказы распределяются без учета рейтинга ближай-шим водителям</li>
+                            <li class="require__item">Работа только по безналичному расчету</li>
+                            <li class="require__item">Деньги перечисляем на карту водителю или наличными в офисе</li>
+                        </ul>
+                        <div class="require__descr">В день заработок составляет 7000-12000р + бонус 3000т рублей</div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="require__block">
+                        <div class="title">УСЛОВИЯ: на авто компании:</div>
+                        <ul class="require__list">
+                            <li class="require__item">Предоставляем авто без залога</li>
+                            <li class="require__item">Без ежедневных выплат по аренде</li>
+                            <li class="require__item">Среда пятница и суббота работа на компанию остальные дни вы работаете на себя</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="require__block">
+                        <div class="title title__require">требование:</div>
+                        <ul class="require__list">
+                            <li class="require__reditem">Наличие автомобиля без рекламы</li>
+                            <li class="require__reditem">Автомобиль не должен быть желтый и не с желтыми номерами</li>
+                            <li class="require__reditem">Машина не старше 3 лет</li>
+                            <li class="require__reditem">Стаж вождения не менее 3 лет</li>
+                            <li class="require__reditem">Девайс на системе андроид 4.0 и выше(самсунг)</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="require__block">
+                        <div class="title title__require">документы:</div>
+                        <ul class="require__list">
+                            <li class="require__reditem">Права 2 стороны</li>
+                            <li class="require__reditem">Паспорт лицевая сторона</li>
+                            <li class="require__reditem">СтС</li>
+                            <li class="require__reditem">Лицензия (если есть)</li>
+                            <li class="require__reditem">Номер телефона</li>
+                            <li class="require__reditem">Номер карты для перечисления денег(указать в письме)!</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="world">
+        <div class="label label__world">города</div>
+        <h2 class="heading heading__world">По всему миру</h2>
+        <h3 class="third__heading third__heading__world">Мы в вашем городе и по всему миру</h3>
+        <div>
+            <img src="img/world/world_bg.png" alt="карта мира" class="world__map">
+        </div>
+        <div class="world__link">
+            <a href="#">посмотреть все города</a>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="devider"></div>
+        <div class="footer__wrapper">
+            <div>
+                <div class="footer__social">
+                    <a href="#" class="footer__item">
+                        <i class="fa-brands fa-facebook-f"></i>
+                    </a>
+                    <a href="#" class="footer__item">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a>
+                    <a href="#" class="footer__item">
+                        <i class="fa-brands fa-linkedin"></i>
+                    </a>
+                    <a href="#" class="footer__item">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                </div>
+            </div>
+            <div>
+                <div class="footer__contacts">
+                    <div class="footer__main">
+                        <a href="#">на главную</a>
+                        <a href="#">города</a>
+                        <a href="#">для водителей</a>
+                    </div>
+                    <div class="footer__submain">
+                        <a href="#">центр поддержки</a>
+                        <a href="#">вакансии</a>
+                        <a href="#">разработчики</a>
+                        <a href="#">блог</a>
+                        <a href="#">о нас</a>
+                    </div>
+                    <div class="footer__lang">
+                        <a href="#">русский</a>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="footer__mobile">
+                    <a href="#">
+                        <img src="img/footer/appstore.png" alt="картинка appstore">
+                    </a>
+                    <a href="#">
+                        <img src="img/footer/googleplay.png" alt="картинка googleplay">
+                    </a>
+                    <a href="#">
+                        <img src="img/footer/Windows.png" alt="картинка windowsstore">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="https://kit.fontawesome.com/35b877e265.js" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
